Closed Bug 1593892 Opened 6 years ago Closed 6 years ago

Fission a11y: Reorder event not fired on iframe accessible after OOP iframe is loaded on platforms other than Windows

Categories

(Core :: Disability Access APIs, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla72
Fission Milestone M4
Tracking Status
firefox72 --- fixed

People

(Reporter: Jamie, Assigned: Jamie)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

In bug 1564299, I added code to fire a reorder event when Fission documents are added to the tree in the parent process. Unfortunately, I unintentionally restricted this code to Windows, since I put it inside an existing ifdef block. This needs to happen on all platforms.

Assignee: nobody → jteh
Fission Milestone: --- → M4

Previously, this code was unintentionally inside a Windows ifdef.

Pushed by jteh@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c35912afabe4 Fire OOP iframe reorder events on all platforms, not just Windows. r=yzen
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72
Has Regression Range: --- → yes
Keywords: regression
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: