Bug 1593892: Fire OOP iframe reorder events on all platforms, not just Windows. r=yzen

Previously, this code was unintentionally inside a Windows ifdef.

Differential Revision: https://phabricator.services.mozilla.com/D51754

--HG--
extra : moz-landing-system : lando