accessible/ipc/DocAccessibleParent.cpp
@@ -568,7 +568,6 @@ ipc::IPCResult DocAccessibleParent::AddChildDoc(DocAccessibleParent* aChildDoc,
     ProxyCreated(aChildDoc, Interfaces::DOCUMENT | Interfaces::HYPERTEXT);
   }
 
-#if defined(XP_WIN)
   if (aChildDoc->IsTopLevelInContentProcess()) {
     // aChildDoc is an embedded document in a different content process to
     // this document.
@@ -577,6 +576,7 @@ ipc::IPCResult DocAccessibleParent::AddChildDoc(DocAccessibleParent* aChildDoc,
     dom::BrowserBridgeParent* bridge =
         embeddedBrowser->GetBrowserBridgeParent();
     if (bridge) {
+#if defined(XP_WIN)
       // Send a COM proxy for the embedded document to the embedder process
       // hosting the iframe. This will be returned as the child of the
       // embedder OuterDocAccessible.
@@ -605,6 +605,7 @@ ipc::IPCResult DocAccessibleParent::AddChildDoc(DocAccessibleParent* aChildDoc,
         Unused << aChildDoc->SendEmulatedWindow(
             reinterpret_cast<uintptr_t>(mEmulatedWindowHandle), nullptr);
       }
+#endif  // defined(XP_WIN)
       // We need to fire a reorder event on the outer doc accessible.
       // For same-process documents, this is fired by the content process, but
       // this isn't possible when the document is in a different process to its
@@ -613,7 +614,6 @@ ipc::IPCResult DocAccessibleParent::AddChildDoc(DocAccessibleParent* aChildDoc,
       Unused << RecvEvent(aParentID, nsIAccessibleEvent::EVENT_REORDER);
     }
   }
-#endif  // defined(XP_WIN)
 
   return IPC_OK();
 }
